--- a/aitelier-ml/notebooks/3_transactions_feature_engineering.ipynb
+++ b/aitelier-ml/notebooks/3_transactions_feature_engineering.ipynb
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "1ab6dbee",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "00e27e87",
    "metadata": {},
    "outputs": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "d9178b5d",
    "metadata": {},
    "outputs": [
@@ -76,7 +77,7 @@
        "(31788324, 5)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "ca9cdfc8",
    "metadata": {},
    "outputs": [
@@ -181,7 +182,7 @@
        "4  0.016932                 2  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,22 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "585f2bf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "t_dat                                                      2020-02-29\n",
-       "customer_id         bc34bd1673bf2fbf66171e838a755d25251e6dde6de96f...\n",
-       "article_id                                                  804732006\n",
-       "price                                                        0.042356\n",
-       "sales_channel_id                                                    2\n",
-       "Name: 22876351, dtype: object"
+       "t_dat                                                      2018-11-15\n",
+       "customer_id         e0e28b98214747804bbb3a92e4779cbcad45a3ee718149...\n",
+       "article_id                                                  522398049\n",
+       "price                                                        0.011847\n",
+       "sales_channel_id                                                    1\n",
+       "Name: 2511028, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "f5be952d",
    "metadata": {},
    "outputs": [
@@ -233,7 +234,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "205061b5",
    "metadata": {},
    "outputs": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0020d8d1",
    "metadata": {},
    "outputs": [],
@@ -302,6 +303,13 @@
     "    day_of_week=lambda df: df['t_dat'].dt.weekday,  # Monday=0, Sunday=6\n",
     ")\n",
     "\n",
+    "# Calculate cyclical encodings for month\n",
+    "C = 2 * np.pi / 12\n",
+    "transactions_df = transactions_df.assign(\n",
+    "    month_sin=lambda df: np.sin(C * df['month']),\n",
+    "    month_cos=lambda df: np.cos(C * df['month']),\n",
+    ")\n",
+    "\n",
     "# Turn t_dat into epoch milliseconds\n",
     "transactions_df = transactions_df.assign(\n",
     "    t_dat=lambda df: df['t_dat'].astype(int) // 10**6\n",
@@ -310,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "b15d617d",
    "metadata": {},
    "outputs": [
@@ -344,6 +352,8 @@
        "      <th>month</th>\n",
        "      <th>day</th>\n",
        "      <th>day_of_week</th>\n",
+       "      <th>month_sin</th>\n",
+       "      <th>month_cos</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -358,6 +368,8 @@
        "      <td>9</td>\n",
        "      <td>20</td>\n",
        "      <td>3</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.836970e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -370,6 +382,8 @@
        "      <td>9</td>\n",
        "      <td>20</td>\n",
        "      <td>3</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.836970e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -382,6 +396,8 @@
        "      <td>9</td>\n",
        "      <td>20</td>\n",
        "      <td>3</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.836970e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -394,6 +410,8 @@
        "      <td>9</td>\n",
        "      <td>20</td>\n",
        "      <td>3</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.836970e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -406,6 +424,8 @@
        "      <td>9</td>\n",
        "      <td>20</td>\n",
        "      <td>3</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.836970e-16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -419,15 +439,22 @@
        "3  1537401600000  00007d2de826758b65a93dd24ce629ed66842531df6699...   \n",
        "4  1537401600000  00007d2de826758b65a93dd24ce629ed66842531df6699...   \n",
        "\n",
-       "  article_id     price  sales_channel_id  year  month  day  day_of_week  \n",
-       "0  663713001  0.050831                 2  2018      9   20            3  \n",
-       "1  541518023  0.030492                 2  2018      9   20            3  \n",
-       "2  505221004  0.015237                 2  2018      9   20            3  \n",
-       "3  685687003  0.016932                 2  2018      9   20            3  \n",
-       "4  685687004  0.016932                 2  2018      9   20            3  "
+       "  article_id     price  sales_channel_id  year  month  day  day_of_week  \\\n",
+       "0  663713001  0.050831                 2  2018      9   20            3   \n",
+       "1  541518023  0.030492                 2  2018      9   20            3   \n",
+       "2  505221004  0.015237                 2  2018      9   20            3   \n",
+       "3  685687003  0.016932                 2  2018      9   20            3   \n",
+       "4  685687004  0.016932                 2  2018      9   20            3   \n",
+       "\n",
+       "   month_sin     month_cos  \n",
+       "0       -1.0 -1.836970e-16  \n",
+       "1       -1.0 -1.836970e-16  \n",
+       "2       -1.0 -1.836970e-16  \n",
+       "3       -1.0 -1.836970e-16  \n",
+       "4       -1.0 -1.836970e-16  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "0206203d",
    "metadata": {},
    "outputs": [],
