--- a/aitelier-ml/notebooks/4_interaction_data_generation.ipynb
+++ b/aitelier-ml/notebooks/4_interaction_data_generation.ipynb
@@ -22,16 +22,7 @@
    "execution_count": 1,
    "id": "12799fa5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vincent_reynard/Developments/PROJECTS/aitelier/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "from pathlib import Path\n",
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f7ab57cb",
    "metadata": {},
    "outputs": [
@@ -102,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "193344a7",
    "metadata": {},
    "outputs": [],
@@ -175,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "08198519",
    "metadata": {},
    "outputs": [],
@@ -193,6 +184,7 @@
     "    return base_timestamp - (hours * 3600000)\n",
     "\n",
     "\n",
+    "interactions = []\n",
     "for customer_id in sampled_customers_df['customer_id'].tolist():\n",
     "    customer_purchases = sampled_transactions_df[\n",
     "        sampled_transactions_df['customer_id'] == customer_id\n",
@@ -203,7 +195,6 @@
     "\n",
     "    customer_articles = {'purchased': set(), 'clicked': set(), 'ignored': set()}\n",
     "    last_purchase_timestamp = customer_purchases['t_dat'].max()\n",
-    "    interactions = []\n",
     "\n",
     "    # First, we generate multiple ignores\n",
     "    num_ignores = np.random.randint(MIN_IGNORES, MAX_IGNORES)\n",
@@ -314,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "df80dc04",
    "metadata": {},
    "outputs": [],
@@ -331,10 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "9e249512",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interactions data size: 223703\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -365,71 +363,72 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>1579885200000</td>\n",
-       "      <td>6d6e91ea618beec6fa2843d5fbf25a9164c6318abdd715...</td>\n",
-       "      <td>455014028</td>\n",
-       "      <td>0</td>\n",
+       "      <th>199595</th>\n",
+       "      <td>1538164800000</td>\n",
+       "      <td>00039306476aaf41a07fed942884f16b30abfa83a2a8be...</td>\n",
+       "      <td>625939003</td>\n",
+       "      <td>1</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1579888800000</td>\n",
-       "      <td>6d6e91ea618beec6fa2843d5fbf25a9164c6318abdd715...</td>\n",
-       "      <td>834002002</td>\n",
-       "      <td>0</td>\n",
-       "      <td>455014028</td>\n",
+       "      <th>199598</th>\n",
+       "      <td>1538172000000</td>\n",
+       "      <td>00039306476aaf41a07fed942884f16b30abfa83a2a8be...</td>\n",
+       "      <td>671186001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>625939003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>1579888800000</td>\n",
-       "      <td>6d6e91ea618beec6fa2843d5fbf25a9164c6318abdd715...</td>\n",
-       "      <td>788115001</td>\n",
-       "      <td>0</td>\n",
-       "      <td>834002002</td>\n",
+       "      <th>199632</th>\n",
+       "      <td>1538186400000</td>\n",
+       "      <td>00039306476aaf41a07fed942884f16b30abfa83a2a8be...</td>\n",
+       "      <td>675139003</td>\n",
+       "      <td>1</td>\n",
+       "      <td>671186001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>1579896000000</td>\n",
-       "      <td>6d6e91ea618beec6fa2843d5fbf25a9164c6318abdd715...</td>\n",
-       "      <td>579302009</td>\n",
-       "      <td>0</td>\n",
-       "      <td>788115001</td>\n",
+       "      <th>199604</th>\n",
+       "      <td>1538193600000</td>\n",
+       "      <td>00039306476aaf41a07fed942884f16b30abfa83a2a8be...</td>\n",
+       "      <td>632832001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>675139003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1579906800000</td>\n",
-       "      <td>6d6e91ea618beec6fa2843d5fbf25a9164c6318abdd715...</td>\n",
-       "      <td>834002002</td>\n",
-       "      <td>0</td>\n",
-       "      <td>579302009</td>\n",
+       "      <th>199597</th>\n",
+       "      <td>1538200800000</td>\n",
+       "      <td>00039306476aaf41a07fed942884f16b30abfa83a2a8be...</td>\n",
+       "      <td>671186001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>632832001</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            t_dat                                        customer_id  \\\n",
-       "31  1579885200000  6d6e91ea618beec6fa2843d5fbf25a9164c6318abdd715...   \n",
-       "23  1579888800000  6d6e91ea618beec6fa2843d5fbf25a9164c6318abdd715...   \n",
-       "39  1579888800000  6d6e91ea618beec6fa2843d5fbf25a9164c6318abdd715...   \n",
-       "68  1579896000000  6d6e91ea618beec6fa2843d5fbf25a9164c6318abdd715...   \n",
-       "24  1579906800000  6d6e91ea618beec6fa2843d5fbf25a9164c6318abdd715...   \n",
+       "                t_dat                                        customer_id  \\\n",
+       "199595  1538164800000  00039306476aaf41a07fed942884f16b30abfa83a2a8be...   \n",
+       "199598  1538172000000  00039306476aaf41a07fed942884f16b30abfa83a2a8be...   \n",
+       "199632  1538186400000  00039306476aaf41a07fed942884f16b30abfa83a2a8be...   \n",
+       "199604  1538193600000  00039306476aaf41a07fed942884f16b30abfa83a2a8be...   \n",
+       "199597  1538200800000  00039306476aaf41a07fed942884f16b30abfa83a2a8be...   \n",
        "\n",
-       "   article_id  interaction_score prev_article_id  \n",
-       "31  455014028                  0           START  \n",
-       "23  834002002                  0       455014028  \n",
-       "39  788115001                  0       834002002  \n",
-       "68  579302009                  0       788115001  \n",
-       "24  834002002                  0       579302009  "
+       "       article_id  interaction_score prev_article_id  \n",
+       "199595  625939003                  1           START  \n",
+       "199598  671186001                  1       625939003  \n",
+       "199632  675139003                  1       671186001  \n",
+       "199604  632832001                  1       675139003  \n",
+       "199597  671186001                  1       632832001  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(f'Interactions data size: {len(final_df)}')\n",
     "final_df.head()"
    ]
   },
@@ -444,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "e1ce2df1",
    "metadata": {},
    "outputs": [],
